cursive-bootstrap/tests/ui/E-CON/E-CON-0260.cursive
// RUN: compile-fail
// DIAG: E-CON-0260
// SPEC: 8.9
// DESC: race with fewer than 2 arms

procedure one() -> Future<i32> {
    return 1
}

procedure single_race() -> i32 {
    return race {  //~ ERROR E-CON-0260: race with fewer than 2 arms
        one() -> |v| v
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
